[package]
name = "bruh_moment"
version = "0.1.0"
edition = "2021"
authors = ["Brandon Piña"]
description = "Re-export of the anyhow crate, but with Bruh as the error type"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
